# gmca

./: README.md
data-analysis/qp2/: .gitignore  DEPLOYMENT_GUIDE.md  README_BUNDLE.md  build_conda_env.sh  build_standalone.py  pyproject.toml
data-analysis/qp2/config/: README.md  redis_keys.py  servers.py
data-analysis/qp2/data_proc/server/: analysis_config.json  analysis_manager.py  data_processing_server.py  data_processing_server.service  mtzfile.py  reference_converter.py  run_server_debug.sh  (+3 more)
data-analysis/qp2/data_viewer/: ai_summary_prompt.txt  main.py  tab_config.py  ui.py  utils.py
data-analysis/qp2/image_viewer/: config.py  performance_test.py  test_file_io_manager.py
data-analysis/qp2/log/: logging_config.py
data-analysis/qp2/pipelines/: PIPELINE_DRIVER_SUMMARY.md  README.md  integration_adapter.py  pipeline_driver.py  test_driver.py
data-analysis/qp2/radiation_decay/: calculations.py  dose_planner.py  mock.py  raddose3d.py  server.py  test_cases.md  test_raddose3d.sh  xtallife.py
data-analysis/qp2/simulated_collection/: 100hz.sh  collect2.sh  mock_gmca.sql  mock_redis_streamer.py  mock_streamer_gui.py  raster.sh  small.sh  stream.sh
data-analysis/qp2/spotfinder2/: __init__.py  __main__.py  backend.py  background.py  cli.py  crystal_count.py  detection.py  detector.py  filtering.py  multi_lattice_analysis.md  performance_analysis.md  pipeline.py  refinement.py  spot_list.py  threshold.py
data-analysis/qp2/spreadsheet_editor/: main.py
data-analysis/qp2/tests/: simulate_distributed_flow.py
data-analysis/qp2/tools/: BEAM_CENTER_ALGORITHM.md  gmca_search.tcl  guess_beam_center.py  plot_masked_pixels.py  verify_copy.py
data-analysis/qp2/utils/: MyInput_GUI.txt  collection.py  hklop2matrix.py  kdose.py  merge_dicts.py  monitor_beam_feedback.py  pipeline_logger.py  recommendations.json
data-analysis/qp2/web_app/: ARCHITECTURE_OVERVIEW.md  package.json  setup_frontend.sh
data-analysis/qp2/xio/: bluice_params.py  db_manager.py  epics_monitor.py  hdf5_combiner.py  hdf5_manager.py  hdf5_to_cbf.py  proc_utils.py  redis_manager.py  user_group_manager.py
(+435 files in other folders)
